2019-02-22 Magnus Hagdorn
 * setup.py: require numpy
 * data/example.pico: add an example spectra file
 * piccolo3/common/PiccoloSpectra.py: add module to handle spectra
 * piccolo3/common/__init__.py: load spectra module

2019-02-22 Magnus Hagdorn
 * start piccolo3-common